2014-05-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infodoc.c (dump_map_to_text_buffer): Hide "echo-area-insert"
	entries in help window.

2014-05-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.h (WINDOW): 'current' field removed.
	* info/window.c (set_remembered_pagetop_and_point)
	(remember_window_and_node, forward_move_node_structure, kill_node):
	Use nodes_index field instead.  (We cannot go forward in the node
	history, so the current node is always the last one in the list.)

2014-05-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (forget_windows_and_nodes): Don't free node
	structures in a window's history when it is deleted.

	(info_handle_pointer): Don't save pagetop and point - done
	when info_set_node_of_window is called.

	(remember_window_and_node): NODE argument removed.  All callers
	updated.

2014-05-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.h (WINDOW): Fields added from INFO_WINDOW:
	nodes, pagetops, points, current, nodes_index, nodes_slots.  Field
	'window' not added.
	* info/info.h (INFO_WINDOW): Typedef deleted.

	* info/session.c (info_windows, info_windows_index)
	(info_windows_slots): Removed.
	(get_info_window_of_window, consistency_check_info_windows): Removed.

	(set_remembered_pagetop_and_point, remember_info_and_node)
	(forget_window_and_nodes, info_handle_pointer,
	(forward_move_node_structure, read_nodename_to_kill)
	(info_gc_file_buffers, kill_node): Access data in WINDOW objects
	instead of INFO_WINDOW objects.

	(info_win_find_node): Argument type changed from INFO_WINDOW to
	WINDOW.
	(info_split_window, kill_node): Loops over info_windows removed.

	* info/nodemenu.c (get_visited_nodes)
	* info/gc.c (gc_pointers): Iterate over 'windows' instead of
	'info_windows'.

2014-05-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (add_initial_nodes) <index lookup>: Look for
	case-ignoring initial substring in indices if no exact match found.
